k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: chatapp-certificate
spec:
  rules:
    - host: clucas.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatapp-ui-cluster-ip-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chatapp-api-cluster-ip-service
                port:
                  number: 5000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chatapp-api-cluster-ip-service
                port:
                  number: 5000
